--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,3 +1,3 @@
-version = 2
-version_url = https://github.com/shawe/dashboard/raw/master/facturascripts.ini
+version = 3
+version_url = "https://github.com/shawe/dashboard/raw/master/facturascripts.ini"
 update_url = "https://github.com/shawe/dashboard/archive/master.zip?ref=master"
