--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,3 +1,4 @@
-version = 3
+version = 4
 version_url = "https://github.com/shawe/dashboard/raw/master/facturascripts.ini"
 update_url = "https://github.com/shawe/dashboard/archive/master.zip?ref=master"
+require = 'facturacion_base'
