Rehecho por francesc.

--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,4 +1,5 @@
-version = 4
+version = 5
 version_url = "https://github.com/shawe/dashboard/raw/master/facturascripts.ini"
 update_url = "https://github.com/shawe/dashboard/archive/master.zip?ref=master"
 require = 'facturacion_base'
+support = 'presupuestos_y_pedidos', 'servicios'
