--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,4 +1,4 @@
 version = 8
-version_url = "https://github.com/shawe/dashboard/raw/master/facturascripts.ini"
-update_url = "https://github.com/shawe/dashboard/archive/master.zip?ref=master"
+version_url = 'https://raw.githubusercontent.com/shawe/dashboard/master/facturascripts.ini'
+update_url = 'https://github.com/shawe/dashboard/archive/master.zip?ref=master'
 require = 'facturacion_base'
